# src/services/inventory/virtualhost/controllers/virtualhost.go
@@ -1,10 +1,12 @@
 package controllers
 
 import (
+	"errors"
 	"net/http"
 
 	"github.com/gin-gonic/gin"
 	"github.com/productivityeng/orabbit/core/core"
+	"github.com/productivityeng/orabbit/db"
 	"github.com/productivityeng/orabbit/virtualhost/dto"
 	"github.com/sirupsen/logrus"
 )
@@ -12,6 +14,8 @@ import (
 type VirtualHostController interface {
 	ListVirtualHost(c *gin.Context)
 	Import(c *gin.Context)
+	Syncronize(c *gin.Context)
+	DeleteVirtualHost(c *gin.Context)
 }
 
 type VirtualHostControllerImpl struct {
@@ -38,4 +42,26 @@ func (ctrl *VirtualHostControllerImpl) parseImportVirtualHostBody(c *gin.Context
 		return
 	}
 	return
+}
+
+
+func(ctrl *VirtualHostControllerImpl) verifyIfVirtualHostIsLocked(virtualHostId int,c *gin.Context) error {
+	result,err :=ctrl.DependencyLocator.PrismaClient.LockerVirtualHost.FindFirst(
+		db.LockerVirtualHost.VirtualHostID.Equals(virtualHostId),
+		db.LockerVirtualHost.Enabled.Equals(true),
+	).Exec(c)
+
+	if errors.Is(err, db.ErrNotFound) { 
+		return nil
+	}else if err != nil {
+		c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
+		return err
+	}
+	
+	if result != nil {
+		c.JSON(http.StatusBadRequest, gin.H{"error": "VirtualHost is locked"})
+		return errors.New("VirtualHost is locked")
+	}
+
+	return nil
 }
