# src/services/inventory/virtualhost/routes.go
@@ -15,6 +15,8 @@ func Routes(routes *gin.Engine, DependencyLocator *core.DependencyLocator) *gin.
 	userRouter := routes.Group("/:clusterId/virtualhost")
 	userRouter.GET("/", virtualHostController.ListVirtualHost)
 	userRouter.POST("/import", virtualHostController.Import)
+	userRouter.POST("/:virtualHostId/syncronize", virtualHostController.Syncronize)
+	userRouter.DELETE("/:virtualHostId", virtualHostController.DeleteVirtualHost)
 
 	return userRouter
 }
